--- a/_pages/class.html
+++ b/_pages/class.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Talks and presentations"
-permalink: /talks/
+title: "Class Taken"
+permalink: /class/
 author_profile: true
 ---
 
